--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 
 <body>
     <h1>
-        <div style="font-size:30px;color:white;
+        <div style="font-size:45px;color:white;
         line-height:30px;padding-bottom:5px;">
-            &ensp;My class
+            <br>&ensp;My class
             <br>
         </div>
-        <text style="font-size:30px;padding-left:10px; color:grey;">
+        <text style="font-size:35px;padding-left:10px; color:grey;">
             &emsp;Matemáticas</text>
     </h1>
     
