--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Número total de asientos en Galería: 286
 &emsp;Galería = [$169.5 - ($169.5 * 0.25)] * 143
 <br>
 <br>
-<p style="color:grey;font-size:20;">&emsp;Jerarquía de operaciones parte II</p>
+<p style="color:white;font-size:20;">&emsp;operaciones parte II</p>
 <br>
 &emsp;Descuento aplicado al boleto en Luneta por preventa:<br>
 &emsp;<i>$560 * 0.5 = </i>
@@ -158,7 +158,7 @@ $<b>42.375</b>
 &emsp;Galería = [$169.5 - $42.375] * 143
 <br>
 <br>
-<p style="color:grey;font-size:20;">&emsp;Jerarquía de operaciones parte III</p>
+<p style="color:white;font-size:20;">&emsp;operaciones parte III</p>
 <br>
 &emsp; Costo del boleto en Luneta una vez aplicado el descuento:<br>
 &emsp;<i>$560 - $280 = </i>
@@ -183,7 +183,7 @@ $<b>127.125</b>
 &emsp;Galería = $127.125 * 143
 <br>
 <br>
-<p style="color:grey;font-size:20;">&emsp;Jerarquía de operaciones parte IV</p>
+<p style="color:white;font-size:20;">&emsp;operaciones parte IV</p>
 <br>
 &emsp;Dinero recaudado en preventa por venta de boletos en Luneta:<br>
 &emsp;$280 * 220 = 
