--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Número total de asientos en Galería: 286
 &emsp;Galería = [$169.5 - ($169.5 * 0.25)] * [1/2(286)]
 <br>
 <br>
-<p style="color:grey;font-size:20;">&emsp;Jerarquía de operaciones parte I</p>
+<p style="color:white;font-size:20;">&emsp;operaciones parte I</p>
 <br>
 &emsp;Cantidad de boletos vendidos en Luneta en preventa:<br>
 &emsp;2/6(660) = 220<br><br>
@@ -124,7 +124,7 @@ Número total de asientos en Galería: 286
 &emsp;1/2(286) = 143
 <br>
 <br>
-<p style="color:grey;font-size:20;">&emsp;Sustituimos nuestros resultados en las expresiones originales</p>
+<p style="color:white;font-size:20;">&emsp;Sustituimos nuestros resultados en las expresiones originales</p>
 <br>
 &emsp;Luneta = [$560 - ($560 * 0.5)] * 220<br>
 &emsp;Anfiteatro = [$320 - ($320 * 0.4)] * 148<br>
@@ -151,7 +151,7 @@ $<b>128</b>
 $<b>42.375</b>
 <br>
 <br>
-<p style="color:grey;font-size:20;">&emsp;Sustituimos nuestros resultados en las expresiones originales</p>
+<p style="color:white;font-size:20;">&emsp;Sustituimos nuestros resultados en las expresiones originales</p>
 <br>
 &emsp;Luneta = [$560 - $280] * 220<br>
 &emsp;Anfiteatro = [$320 - $128] * 148<br>
@@ -176,7 +176,7 @@ $<b>192</b>
 $<b>127.125</b>
 <br>
 <br>
-<p style="color:grey;font-size:20;">&emsp;Sustituimos nuestros resultados en las expresiones originales</p>
+<p style="color:white;font-size:20;">&emsp;Sustituimos nuestros resultados en las expresiones originales</p>
 <br>
 &emsp;Luneta = $280 * 220<br>
 &emsp;Anfiteatro = $192 * 148<br>
