--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@ $<b>108,194.9</b>
 <br>
 <br>
 &emsp; Luneta:<br>
-&emsp;<i>(660-220) * $560 = <br><br>
+&emsp;<i>(660-220) * $560 = $246,400.00<br><br>
 &emsp; Anfiteatro:<br>
-&emsp;<i>(444-148) * $________ = <br><br>
+&emsp;<i>(444-148) * $320 = $94,720.00<br><br>
 &emsp; Galería:<br>
-&emsp;<i>________ * $________ = </i>
+&emsp;<i>(286 - 143) * $169.5 = $24,238.5</i>
 
 $<b>24,238.5</b>
 <br><br>
@@ -226,12 +226,12 @@ $<b>24,238.5</b>
 <br>
 &emsp; Total día del evento =   <br><br>
 </p>
-&emsp;$246,400 + $_______ + $_________ = $_________
+&emsp;$246,400.00 + $94,720.00 + $24,238.5 = $365,358.5
 <br>
 <br>
 <br>
 <p style="color:white;font-size:20;font-weight:bold;">Recaudación total (total preventa + total día del evento)</p>
-<p style="color:white;font-weight:bold;">&emsp;$108,194.9 + $_________ = &nbsp;$___________
+<p style="color:white;font-weight:bold;">&emsp;$108,194.9 + $365,358.5 = &nbsp;$___________
 </p>
 <br>
 <br>
