--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ $<b>24,238.5</b>
 <br>
 <br>
 <p style="color:white;font-size:20;font-weight:bold;">Recaudación total (total preventa + total día del evento)</p>
-<p style="color:white;font-weight:bold;">&emsp;$108,194.9 + $365,358.5 = &nbsp;$$473,553.4
+<p style="color:white;font-weight:bold;">&emsp;$108,194.9 + $365,358.5 = &nbsp;$473,553.4
 </p>
 <br>
 <br>
