--- a/index.html
+++ b/index.html
@@ -191,21 +191,15 @@ $<b>127.125</b>
 $<b>61,600</b>
 <br><br>
 &emsp;Dinero recaudado en preventa por venta de boletos en Anfiteatro:<br>
-&emsp;$192 * 148 = 
-
-$<b>28,416</b>
+&emsp;$192 * 148 = $<b>28,416</b>
 <br><br>
 &emsp;Dinero recaudado en preventa por venta de boletos en Galería:<br>
-&emsp;$127.125 * 143 = 
-
-$<b>18,178.88</b>
+&emsp;$127.125 * 143 = $<b>18,178.88</b>
 <br>
 <br>
 <p style="color:grey;font-size:20;font-weight:bold;">&emsp;Recaudación total durante la preventa</p>
 <br>
-&emsp;$61,600 + $28,416 + $18,178.88 = 
-
-$<b>108,194.9</b>
+&emsp;$61,600 + $28,416 + $18,178.88 = $<b>108,194.9</b>
 <br>
 <br>
 <br>
@@ -214,11 +208,11 @@ $<b>108,194.9</b>
 <br>
 <br>
 &emsp; Luneta:<br>
-&emsp;<i>(660-220) * $560 = $246,400.00<br><br>
+&emsp;<i>(660-220) * $560 = <b>$246,400.00</b><br><br>
 &emsp; Anfiteatro:<br>
-&emsp;<i>(444-148) * $320 = $94,720.00<br><br>
+&emsp;<i>(444-148) * $320 = <b>$94,720.00</b><br><br>
 &emsp; Galería:<br>
-&emsp;<i>(286 - 143) * $169.5 = $24,238.5</i>
+&emsp;<i>(286 - 143) * $169.5 = <b>$24,238.5</b></i>
 
 $<b>24,238.5</b>
 <br><br>
@@ -226,12 +220,12 @@ $<b>24,238.5</b>
 <br>
 &emsp; Total día del evento =   <br><br>
 </p>
-&emsp;$246,400.00 + $94,720.00 + $24,238.5 = $365,358.5
+&emsp;$246,400.00 + $94,720.00 + $24,238.5 = <b>$365,358.5</b>
 <br>
 <br>
 <br>
 <p style="color:white;font-size:20;font-weight:bold;">Recaudación total (total preventa + total día del evento)</p>
-<p style="color:white;font-weight:bold;">&emsp;$108,194.9 + $365,358.5 = &nbsp;$473,553.4
+<p style="color:white;font-weight:bold;">&emsp;$108,194.9 + $365,358.5 = &nbsp;<b></b>$473,553.4</b>
 </p>
 <br>
 <br>
